sass/navigation/_menus.scss
.main-navigation {
	clear: both;
	display: block;
	float: left;
	width: 100%;    
	padding-top: 1em;
    background: rgba(0, 0, 0, 0.75);
	position: relative;
	z-index: 1103;

	@include font-size(1.25); // 20px font size

	ul {
		list-style: none;
		margin: 0;
		padding-left: 0;
		opacity: 0;
		max-height: 0;
		@include transition(all, 0.8s, easeOut);

		ul {
			float: left;
			position: absolute;
			top: 2.5em;
			left: -999em;
			z-index: 99999;
			@include transition(opacity .3s ease);
			opacity: 0;

			ul {
				left: -999em;
				top: 0;
			}

			li {
				padding-left: 0;
    			padding-bottom: 0px;

				&:hover > ul,
				&.focus > ul {
					left: 100%;
				}
			}

			a {
				width: 200px;
				color: #000;
			}

			:hover > a,
			.focus > a {
				color: #888;
			}

			a:hover,
			a.focus {
			}
		}

		li:hover > ul,
		li.focus > ul {
			left: auto;
			background: #FFF;
			padding: 1em;
			margin-left: -1em;
			opacity: 1;
		}
	}
	
	// all levels li
	li {
		display: inline-block;
		position: relative;
		padding: 0 40px 20px 25px;
		text-align: left;

		&:hover > a,
		&.focus > a {
			// border-bottom: 1px solid #888;
			// box-shadow: inset 0 -8px 0 #888;
		}
	}

	// first level only
	.nav-menu > li {
		background: url('./img/2x/check-white.png') no-repeat right 10px;
		background-size: 12px 12px;
	}

	.nav-menu > li:last-child {
		background: none;
	}
	
	// all links
	a {
		display: block;
		text-decoration: none;
		text-transform: lowercase;
		color: #fff;
		@include transition(box-shadow, 0.3s, easeOut);
	}

	.current_page_item > a,
	.current-menu-item > a,
	.current_page_ancestor > a,
	.current-menu-ancestor > a {
	}
}

/* Small menu. */
.menu-toggle {
	border: none;
	background: none;
	outline: none;
	margin: 0 auto;
	text-transform: lowercase;
}

.menu-toggle,
.main-navigation.toggled ul {
	display: block;
}

.main-navigation.toggled ul {
	opacity: 1;
	max-height: 500px;	// higher than it will ever be: allow the css transition on height
}

@include media(">phone") {

	.menu-toggle {
		display: none;
	}
	.main-navigation ul {
		display: block;
		opacity: 1;
		height: auto;
		max-height: 500px;
	}

}

.comment-navigation,
.posts-navigation,
.post-navigation {

	.site-main & {
		margin: 0 auto;
		overflow: hidden;
		width: 75%;
		text-align: left;
	}

	.nav-previous {
		float: left;
		width: 50%;
	}

	.nav-next {
		float: right;
		text-align: right;
		width: 50%;
	}
}


.subhead-menu {

	width: 70%;
	float: right;
	color: #FFF;
	list-style: none;
	text-transform: uppercase;
	text-align: right;	
	margin: 0; 
	padding: 17px 20px 17px 20px;
	@include font-size(0.6875);

	li {
		display: inline;

		a, a:active, a:visited {
			color: #FFF;
			text-decoration: none;
		}
	}

	li::after {
	    content: '–';
	    padding-left: 10px;
	    padding-right: 10px;
	}

	li:last-child::after {
	    content: none;
	    padding-right: 0;
	}

}

.polylang-menu {

	width: 30%;
	float: left;
	margin: 0;
	list-style: none;
	text-transform: uppercase;
	text-align: left;
	padding: 17px 20px 17px 20px;
	@include font-size(0.6875);


	li {
		display: inline;

		a, a:active, a:visited {
			color: #FFF;
			text-decoration: none;
		}
	}
}





@include media("<=phone") {
	
	.main-navigation {
		text-align: center;
   		padding-top: 0.5em;

		.nav-menu > li {
			background: url('./img/2x/check-white.png') no-repeat center bottom;
			background-size: 12px 12px;
		}

		li {
			display: block;
			// position: relative;
			padding: 0 0 16px 0;
			text-align: center;
			margin-bottom: 10px;
		}

		ul {

			ul {
				left: 0;
				opacity: 1;
				max-height: initial;

				a {
					width: auto;
					color: #fff;
					padding-top: 10px;
					@include font-size(1);
				}

				li {
					margin-bottom: 0;
				}

			}

			li > ul,
			li:hover > ul,
			li.focus > ul {
				margin-left: 0;
				float: none;
				position: relative;
				padding: 0;
				top: 0;
				margin-bottom: 10px;
			}

		}

	}

}

